--- a/README.Rmd
+++ b/README.Rmd
@@ -5,7 +5,7 @@ date: "10/20/2019"
 output: rmarkdown::github_document
 ---
 
-```{r setup, include=FALSE}
+```{r setup}
 require(knitr)
 knitr::opts_chunk$set(echo = TRUE)
 library(maps)
